doc: reutilizacao padrao chain
Co-authored-by: Maciel Júnior <macieljuniormax@users.noreply.github.com>

--- a/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
+++ b/docs/ArquiteturaReutilizacao/4.2.ReutilizacaoDeSoftware.md
@@ -48,8 +48,24 @@ Fonte: [Douglas Alves](https://github.com/dougAlvs), 2023.
 
 ### Padrões de Projeto - Análise de Hot spots e Frozen spots
 
-
 A análise de *hot spots* se dá pela análise dos pontos de especialização de um determinado framework. Sendo assim, as classes que possuem implementação rasa ou sem muito significado se caracterizam mais como pontos de hot spots (PREE, 1997). Logo, infere-se que as partes de implementação mais concretas e específicas são definidas como *frozen spots*. 
+
+### Chain of Responsibility
+No padrão de projeto Chain of Responsibility, por definição, a classe destinada ao Handler é a mais estável, ou seja, é aquela que identifica o frozen spot. Isso ocorre porque é nela que está definida a lógica padrão para encaminhar a solicitação para o próximo manipulador da cadeia. No exemplo aplicado neste projeto, isso se refere à interface `CupomHandler`, que possui métodos fixos implementados: `setProximo` e `validarCupom`.
+
+Agora, como hot spots, foram identificadas todas as classes implementadas em relação ao Handler. Neste projeto, essas classes são `ValidarExistencia`, `ValidarData`, `ValidarTipoProduto` e `AplicarDesconto`. Essa flexibilidade pode ser percebida na prática ao notar que o método fixo `validarCupom`, implementado na interface, sofre alterações adaptadas para cada manipulador de acordo com o seu objetivo, ou seja, ele é "maleável" de acordo com o contexto em que é utilizado. Outro fator que pode demonstrar ainda mais essa flexibilidade é a aplicação do padrão Strategy neste projeto, que realiza o cálculo do valor a ser descontado. Portanto, esse padrão poderia ser implementado na classe `AplicarDesconto`, evidenciando ainda mais a versatilidade desses manipuladores.
+
+Na Figura 1 abaixo, é possível visualizar, destacados por retângulos vermelhos, os hot spots do padrão, e por retângulos azuis, os "frozen spots" identificados.
+
+<center>
+
+Figura 1 - Diagrama de Classes Chain of Responsibility
+
+<img src="assets/DiagramaReutilizacao/reutilizacao_chain_of.png" alt="Classes" width="1400"/>
+
+<font>Fonte: Autores, 2023</font>
+
+</center>
 
 ### Singleton
 Ao aplicar a análise de *hot spots* e *frozen spots* na implementação do padrão de projeto Singleton, identificamos o hot spot quando observa-se que o Singleton é particularmente útil no controle de acesso a uma única instância global em todo o sistema. Especificamente, a classe `DatabaseSingleton` se destaca como um hot spot, pois oferece uma abordagem centralizada para controlar e gerenciar o acesso a uma única instância. Essa característica é valiosa, pois impede a criação de múltiplas instâncias, garantindo consistência e evitando comportamentos inesperados no contexto do sistema. 
@@ -58,7 +74,7 @@ Como frozen spots, podemos identificar a testabilidade da classe `PlataformStati
 
 <center>
 
-Figura 1 - Diagrama de Classes Singleton
+Figura 2 - Diagrama de Classes Singleton
 
 <img src="assets\DiagramaReutilizacao\singletonHotFrozen.png" alt="Classes" width="1400"/>
 
@@ -72,11 +88,11 @@ Antes da análise, deve-se ponderar que esta resolução não objetiva validar s
 
 No caso da especialização do Strategy implementada para o projeto, os frozen spots ficam notórios a se considerar que o padrão seria reutilizado para cálculo de desconto. Portanto, a especialização destes seria pouco provável, e tais correspondem às classes destacadas de azul na imagem: `calcDescontoStrategy`, `calcDescontoPorcento`, `calcDescontoValor` e `noDiscount`.
 
-No entanto, apenas uma classe corresponde ao que é maleável: a `sacola`. Dado que o contexto pode mudar, por mais que seja necessário aplicar o desconto, o valor total pode ser calculado de forma diferente, bem como os itens podem ser armazenados de forma diferente. Além de que os métodos são extremamente gerais e não especializados mesmo na implementação do diagrama da Figura 2.
+No entanto, apenas uma classe corresponde ao que é maleável: a `sacola`. Dado que o contexto pode mudar, por mais que seja necessário aplicar o desconto, o valor total pode ser calculado de forma diferente, bem como os itens podem ser armazenados de forma diferente. Além de que os métodos são extremamente gerais e não especializados mesmo na implementação do diagrama da Figura 3.
 
 <center>
 
-Figura 2 - Diagrama de Classes Strategy
+Figura 3 - Diagrama de Classes Strategy
 
 <img src="assets/strategy/strategy-hf.png" alt="Classes" width="1400"/>
 
@@ -102,11 +118,11 @@ No ano de 1997, ao reconhecerem a imprescindibilidade dos testes automatizados, 
 
 Sendo assim, o JUnit 4.11 foi utilizado neste projeto para implementar testes unitários para a funcionalidade de cálculo de desconto dos cupons por meio do padrão de design Strategy. Para cada classe concreta do Strategy, foram elaborados apenas dois casos de testes, dado que o cálculo do valor final não envolvia condicionais. Além disso, o JUnit foi utilizado junto ao [Apache Maven](https://maven.apache.org/), o qual fez o gerenciamento das dependências e foi utilizado para rodar a suíte de testes.
 
-Portanto, para rodar os testes, é necessário instalar o [Apache Maven](https://maven.apache.org/) por meio do comando `sudo apt-get install maven` no terminal do linux. Em seguida, utilize o comando `mvn compile exec:java` na pasta `code/padroes/strategy/demo`. Dessa forma, o projeto será compilado e terá suas dependências instaladas. Por fim, para executar todos os testes, basta digitar `mvn test`, e o resultado obtido está explicitado na Figura ZZ1. Contudo, caso opte somente por executar um teste apenas, utilize do comando `mvn test -Dtest="NomeDoTeste"`, como exemplo de uso no projeto: `mvn test -Dtest="CalcDescontoValorTest"`.
+Portanto, para rodar os testes, é necessário instalar o [Apache Maven](https://maven.apache.org/) por meio do comando `sudo apt-get install maven` no terminal do linux. Em seguida, utilize o comando `mvn compile exec:java` na pasta `code/padroes/strategy/demo`. Dessa forma, o projeto será compilado e terá suas dependências instaladas. Por fim, para executar todos os testes, basta digitar `mvn test`, e o resultado obtido está explicitado na Figura 4. Contudo, caso opte somente por executar um teste apenas, utilize do comando `mvn test -Dtest="NomeDoTeste"`, como exemplo de uso no projeto: `mvn test -Dtest="CalcDescontoValorTest"`.
 
 <center>
 
-Figura ZZ1 - Execução dos testes
+Figura 4 - Execução dos testes
 
 <img src="assets/testes.png" alt="Suite de testes" width="1400"/>
 
@@ -127,11 +143,11 @@ Como um exemplo desse reúso de software por meio de banco de dados, foi feita a
 3. No repositório do projeto, especificamente no diretório [code/banco-de-dados](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/tree/main/code/banco-de-dados), estão localizados os scripts SQL do banco. Execute primeiro o [cria.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/cria.sql) para criar o banco de dados, tabelas e views, e depois o [popula.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/popula.sql) para popular essas tabelas;
 4. Se tudo tiver ocorrido bem, o banco já vai estar funcionando na base de dados magaluDB. Caso queira realizar alguns testes, o script [busca.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/busca.sql) apresenta algumas queries SQL que seriam comuns em uma aplicação desse escopo e o script [apaga.sql](https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/blob/main/code/banco-de-dados/apaga.sql), que não existiria de maneira tão exposta em casos reais, serve como ferramenta para realizar testes na base de exemplo criada.
 
-Além disso, um outro exemplo de reutilização de software na camada de persistência é o uso de views. Uma view possibilita encapsular determinadas queries SQL como se fossem tabelas, assim pesquisas comumemente realizadas na base de dados, ao invés de serem repetidas, são transformadas em views, com a pesquisa sendo feita em cima delas, ao invés disso. O exemplo de implementação do padrão de projeto [singleton](/PadroesDeProjeto/singleton) exercita a conexão ao banco de dados com esse padrão, além do uso de views no backend. A Figura X mostra alguns exemplos de views que foram criadas no banco de dados do projeto.
+Além disso, um outro exemplo de reutilização de software na camada de persistência é o uso de views. Uma view possibilita encapsular determinadas queries SQL como se fossem tabelas, assim pesquisas comumemente realizadas na base de dados, ao invés de serem repetidas, são transformadas em views, com a pesquisa sendo feita em cima delas, ao invés disso. O exemplo de implementação do padrão de projeto [singleton](/PadroesDeProjeto/singleton) exercita a conexão ao banco de dados com esse padrão, além do uso de views no backend. A Figura 5 mostra alguns exemplos de views que foram criadas no banco de dados do projeto.
 
 <center>
 
-Figura X - Views criadas para o projeto
+Figura 5 - Views criadas para o projeto
 
 <img src="assets/DiagramaReutilizacao/views.png" alt="Views criadas para o projeto" width="1400"/>
 
@@ -177,3 +193,4 @@ Figura X - Views criadas para o projeto
 | 1.0.6     | Adiciona reutilização do singleton | [Douglas Alves](https://github.com/dougAlvs) e [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023  | 
 | 1.0.7     | Adiciona tópico de reutilização por padrões de projeto  | [Douglas Alves](https://github.com/dougAlvs) | [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023  |
 | 1.0.8      | Adiciona reutilização do maven  | [Arthur de Melo](https://github.com/arthurmlv)  |  [Matheus Henrique](https://github.com/mathonaut)  | 01/12/2023|
+| 1.0.9      | Adiciona reutilização do chain of responsibility  | [Débora Moreira](https://github.com/deboracaires) e [Maciel Júnior](https://github.com/macieljuniormax)  |  [Arthur de Melo](https://github.com/arthurmlv)  | 01/12/2023|
